--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -1,9 +1,11 @@
+@import url('http://fonts.cdnfonts.com/css/iranian-sans');
+@import url("https://cdn.fontcdn.ir/Font/Persian/Vazir/Vazir.css");
 html,
 body {
   padding: 0;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif,Vazir,iranian-sans;
 }
 
 a {
@@ -13,4 +15,5 @@ a {
 
 * {
   box-sizing: border-box;
+  font-family: Vazir;
 }
