--- a/styles/navbar.module.scss
+++ b/styles/navbar.module.scss
@@ -1,17 +1,75 @@
-@import 'variables';
+@import "variables";
+@import "mixin";
 
-.container {
- display: block;
- height: 10vh;
- div{
-    display: flex;
-    flex-direction: row-reverse;
-    align-items: center;
-    justify-content: space-between;
-    padding: 0 4vw;
- }
+//header container
+.header {
+  top: 0;
+  left: 0;
+  position: fixed;
+  width: 100vw;
+  height: 12vh;
+  display: flex;
+  flex-direction: row-reverse;
+  align-items: center;
+  justify-content: space-between;
+  padding: 0 4vw;
 }
 
-.nav_right a{
-    padding: 0 10px;
+//right navbar
+.nav_right a {
+  padding: 0 1.4rem;
+  @include link_style;
+}
+
+//////////////////left navbar
+.nav_left {
+  display: flex;
+  align-items: center;
+  width: 18rem;
+  padding-right: 10px;
+  background-color: $light_green;
+  justify-content: flex-end;
+  height: 12vh;
+}
+
+//select option
+.nav_left select {
+  border: none;
+  outline: none;
+  background-color: transparent;
+  text-align: right;
+  color: white;
+  @include link_style;
+  option {
+    background-color: white;
+    color: $dark_text;
+    padding: 0 2px;
+    &:hover {
+      background-color: $green;
+      color: white;
+      box-shadow: none;
+    }
+  }
+}
+
+//search box
+.input {
+  @include input(4rem);
+}
+.icon_inside {
+  position: relative;
+}
+.icon_inside svg {
+  position: absolute;
+  left: 0;
+  top: 10px;
+}
+//////////////////end of left navbar
+
+.card_container {
+  background-color: $green;
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  @include center;
 }
