--- a/styles/_mixin.scss
+++ b/styles/_mixin.scss
@@ -32,3 +32,14 @@
     color: $green;
   }
 }
+
+@mixin button {
+  background-color: $green;
+  line-height: 20px;
+  color:white;
+  height: 40px;
+  width: 8rem;
+  border: none;
+  outline: none;
+  
+}
