--- a/styles/_mixin.scss
+++ b/styles/_mixin.scss
@@ -20,7 +20,7 @@
   transition: width 0.4s ease-in;
   &:focus {
     width: 10rem;
-    background-color: #f6f6f6;
+    background-color: #fff;
   }
 }
 
