--- a/styles/navbar.module.scss
+++ b/styles/navbar.module.scss
@@ -7,36 +7,36 @@
   left: 0;
   position: fixed;
   width: 100vw;
-  height: 12vh;
-  display: flex;
-  flex-direction: row-reverse;
-  align-items: center;
-  justify-content: space-between;
-  padding: 0 4vw;
   z-index: 99;
+  display: grid;
+  grid-template-columns: 4vw repeat(14, 1fr) 4vw;
+  grid-template-rows: 12vh;
 }
 
-//right navbar
-.nav_right a {
-  padding: 0 1.4rem;
-  @include link_style;
+.card_container {
+  grid-column: 2 / 3;
+  @include center;
+}
+.card_container div {
+  background-color: $green;
+  padding: 8px;
+  border-radius: 50%;
+  @include center;
 }
 
-//////////////////left navbar
+//nav left
 .nav_left {
+  grid-column: 3 / 8;
   display: flex;
   align-items: center;
-  width: 18rem;
   padding-right: 10px;
   background-color: $light_green;
   justify-content: flex-end;
-  height: 160vh;
 }
-
-//select option
 .nav_left select {
   border: none;
   outline: none;
+  padding-right: 5px;
   background-color: transparent;
   text-align: right;
   color: white;
@@ -65,12 +65,20 @@
   left: 0;
   top: 10px;
 }
-//////////////////end of left navbar
+//end of nav left
 
-.card_container {
-  background-color: $green;
-  width: 40px;
-  height: 40px;
-  border-radius: 50%;
+//nav_right
+.nav_right {
+  grid-column: 8 / 15;
+  @include center;
+}
+.nav_right a {
+  padding: 0 1rem;
+  @include link_style;
+}
+
+//logo container
+.logo_container {
+  grid-column: 15/16;
   @include center;
 }
