--- a/styles/_mixin.scss
+++ b/styles/_mixin.scss
@@ -33,13 +33,64 @@
   }
 }
 
+//button animate
 @mixin button {
   background-color: $green;
   line-height: 20px;
-  color:white;
+  color: white;
   height: 40px;
   width: 8rem;
   border: none;
   outline: none;
-  
+  position: relative;
+  z-index: 9;
+}
+.button:before {
+  content: "";
+  position: absolute;
+  background-color: $light_green;
+  top: 100%;
+  width: 100%;
+  left: 0;
+  height: 0;
+  z-index: -1;
+  opacity: 0.9;
+  transition: all ease 0.5s;
+}
+.button:hover {
+  color: $green;
+}
+.button:hover:before {
+  top: 0;
+  height: 100%;
+}
+//end of button animated
+
+
+//opacity animation
+@mixin opacity_animation($start, $duration) {
+  opacity: 0;
+  animation-timing-function: ease-out;
+  animation-name: example;
+  animation-duration: $duration;
+  animation-delay: $start;
+  animation-fill-mode: forwards;
+}
+
+@keyframes example {
+  0% {
+    opacity: 0;
+  }
+  25% {
+    opacity: 0.25;
+  }
+  50% {
+    opacity: 0.5;
+  }
+  75% {
+    opacity: 0.75;
+  }
+  100% {
+    opacity: 1;
+  }
 }
