--- a/styles/home.module.scss
+++ b/styles/home.module.scss
@@ -1,19 +1,55 @@
 @import "variables";
 @import "mixin";
 
-.container{
-    height: 70vh;
-    width: 100%;
-    display: flex;
-    background-color: aqua;
-    margin-top: 12vh;
+.container {
+  margin-top: 12vh;
+  width: 100vw;
+  display: grid;
+  grid-template-columns: 4vw repeat(14, 1fr) 4vw;
+  grid-template-rows: 70vh;
 }
-.green_section{
-    width: 30%;
-    background-color: $light_green;
-    height: 60vh;
-    margin-left: 4vw;
+
+.green_section {
+  grid-column: 3/8;
+  grid-row: 1/2;
+  background-color: $light_green !important;
+  position: relative;
 }
-.button{
-    @include button;
+.green_section div {
+  position: absolute;
+  left: 60%;
+  width: 80%;
+  height: 80%;
+}
+
+.container main {
+  grid-column: 8 / 16;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-end;
+  color: $dark_text;
+  padding: 0 1rem 0 3rem;
+}
+.container main span {
+  color: $green;
+}
+.container main h1 {
+  text-align: right;
+  font-size: 1.8rem;
+  @include opacity_animation(1s, 0.5s);
+}
+
+.container main p {
+  text-align: right;
+  padding-left: 3rem;
+  @include opacity_animation(2s, 0.5s);
+}
+
+.container main span::after {
+  content: " ";
+}
+
+.button {
+  @include button;
 }
