--- a/styles/titr.module.scss
+++ b/styles/titr.module.scss
@@ -1,2 +1,45 @@
 @import "variables";
 @import "mixin";
+
+.container {
+  @include center;
+  font-size: 1.4rem;
+  color: $dark_text;
+  height: 15vh;
+  padding-top: 2vh;
+  position: relative;
+}
+
+//line
+.container::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 2px;
+  background-image: linear-gradient(
+    to right,
+    #fff,
+    $light_green,
+    $green,
+    $light_green,
+    #fff
+  );
+}
+.container::after {
+  content: "";
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 2px;
+  background-image: linear-gradient(
+    to right,
+    #fff,
+    $light_green,
+    $green,
+    $light_green,
+    #fff
+  );
+}
