--- a/styles/_mixin.scss
+++ b/styles/_mixin.scss
@@ -94,3 +94,10 @@
     opacity: 1;
   }
 }
+
+//space between content
+@mixin categori_content {
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+}
