--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -2,9 +2,13 @@
 $green: rgb(107, 140, 85);
 $light_green: rgb(236, 242, 230);
 $dark_text: #42474b;
+$gray: rgb(234, 237, 242);
+$pink: rgb(247, 237, 238);
 
 :export {
   green: $green;
   light_green: $light_green;
   dark_text: $dark_text;
+  gray: $gray;
+  pink: $pink;
 }
