--- a/styles/_mixin.scss
+++ b/styles/_mixin.scss
@@ -66,7 +66,6 @@
 }
 //end of button animated
 
-
 //opacity animation
 @mixin opacity_animation($start, $duration) {
   opacity: 0;
@@ -100,4 +99,10 @@
   display: flex;
   align-items: center;
   justify-content: space-around;
+}
+
+@mixin boxSadow {
+  box-shadow: rgba(0, 0, 0, 0.03) 0px 2px 1px, rgba(0, 0, 0, 0.03) 0px 4px 2px,
+    rgba(0, 0, 0, 0.03) 0px 8px 4px, rgba(0, 0, 0, 0.03) 0px 16px 8px,
+    rgba(0, 0, 0, 0.03) 0px 32px 16px;
 }
