--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -5,6 +5,8 @@ $dark_text: #42474b;
 $gray: rgb(234, 237, 242);
 $pink: rgb(247, 237, 238);
 $product_bg: rgb(243,243,243);
+$footer_bg: rgb(243,243,243);
+$light_text: rgb(121,121,121);
 
 :export {
   green: $green;
@@ -13,4 +15,6 @@ $product_bg: rgb(243,243,243);
   gray: $gray;
   pink: $pink;
   product_bg : $product_bg;
+  footer_bg : $footer_bg;
+  light_text:$light_text;
 }
