--- a/styles/product.module.scss
+++ b/styles/product.module.scss
@@ -3,15 +3,20 @@
 
 .products_container {
   display: grid;
-  column-gap: 1rem;
+  column-gap: 1.5rem;
   row-gap: 2rem;
   grid-template-columns: auto auto auto auto;
-  padding: 0 4vw;
+  padding:  4vw;
 }
 
 .product_container {
   font-size: 30px;
   text-align: center;
+  padding-bottom: 4rem;
+  &:hover {
+    @include boxSadow;
+    border-radius: 5px;
+  }
 }
 
 .image_container {
