--- a/styles/navbar.module.scss
+++ b/styles/navbar.module.scss
@@ -7,16 +7,17 @@
   left: 0;
   position: fixed;
   width: 100vw;
+  padding: 0 4vw;
   background-color: #fff;
   z-index: 100;
   display: grid;
-  grid-template-columns: 4vw repeat(14, 1fr) 4vw;
+  grid-template-columns:  1fr 5fr 7fr 1fr;
   grid-template-rows: 12vh;
   @include boxSadow;
 }
 
 .card_container {
-  grid-column: 2 / 3;
+  
   @include center;
 }
 .card_container div {
@@ -28,7 +29,6 @@
 
 //nav left
 .nav_left {
-  grid-column: 3 / 8;
   display: flex;
   align-items: center;
   padding-right: 10px;
@@ -72,7 +72,7 @@
 
 //nav_right
 .nav_right {
-  grid-column: 8 / 15;
+  
   @include center;
 }
 .nav_right a {
@@ -82,7 +82,7 @@
 
 //logo container
 .logo_container {
-  grid-column: 15/16;
+  
   @include center;
 }
 
