--- a/styles/_mixin.scss
+++ b/styles/_mixin.scss
@@ -10,7 +10,7 @@
 //search box input
 @mixin input($width) {
   width: $width;
-  margin-right: 10px;
+//margin-right: 10px;
   background-color: $light_green;
   padding: 10px 10px 10px 30px;
   border: none;
@@ -38,7 +38,7 @@
   background-color: $green;
   line-height: 20px;
   color: white;
-  height: 40px;
+  height: 45px;
   width: 8rem;
   border: none;
   outline: none;
