--- a/styles/categories.module.scss
+++ b/styles/categories.module.scss
@@ -29,3 +29,13 @@ grid-template-rows: 35vh 35vh;
     background-color: $pink;
     @include categori_content;
 }
+
+@media (max-width: 768px) {
+  .container{
+    grid-template-columns:auto ;
+    grid-template-rows: 35vh 35vh 35vh;
+  }
+  .left_card , .top_card,.bottom_card{
+    grid-area:auto;
+}
+}
