--- a/styles/footer.module.scss
+++ b/styles/footer.module.scss
@@ -40,3 +40,15 @@ padding: 8px 0;
     color: $green;
 }
 }
+
+@media (max-width: 768px) {
+    .footer{
+      grid-template-columns: 1fr 2fr ;
+    }
+    .text{
+        padding:8px 0rem 0 2rem ;
+        text-align: right;
+        
+    }
+    
+    }
