--- a/styles/home.module.scss
+++ b/styles/home.module.scss
@@ -2,7 +2,7 @@
 @import "mixin";
 
 .container {
-  margin-top: 12vh;
+  margin-top: 6vh;
   width: 100vw;
   display: grid;
   padding: 0 4vw;
@@ -18,6 +18,7 @@
 }
 .green_section div {
   position: absolute;
+  top: 10%;
   left: 60%;
   width: 80%;
   height: 80%;
@@ -30,7 +31,7 @@
   justify-content: center;
   align-items: flex-end;
   color: $dark_text;
-  padding: 0 1rem 0 3rem;
+  padding: 1rem 1rem 1rem 3rem;
 }
 .container main span {
   color: $green;
@@ -55,8 +56,34 @@
   @include button;
 }
 
+@media (max-width: 926px) and (min-width: 768px) {
+  .container {
+    grid-template-rows: 55vh;
+  }
+}
+
+
 @media (max-width: 768px) {
   .container {
-    grid-template-columns: "main" "green_section";
+    padding: 0;
+    margin-top: 9vh;
+    grid-template-columns: auto;
+    grid-template-rows: 30vh 50vh;
+  }
+
+  .green_section {
+    grid-column: 1/2;
+    grid-row: 1/2;
+  }
+  .green_section div {
+    position: absolute;
+    top: 20%;
+    left: 0;
+    width: 45%;
+    height: 45%;
+  }
+  .container main {
+    grid-column: 1/2;
+    grid-row: 2/3;
   }
 }
