--- a/styles/navbar.module.scss
+++ b/styles/navbar.module.scss
@@ -11,13 +11,12 @@
   background-color: #fff;
   z-index: 100;
   display: grid;
-  grid-template-columns:  1fr 5fr 7fr 1fr;
+  grid-template-columns: 1fr 5fr 7fr 1fr;
   grid-template-rows: 12vh;
   @include boxSadow;
 }
 
 .card_container {
-  
   @include center;
 }
 .card_container div {
@@ -58,7 +57,7 @@
 //search box
 .input {
   direction: rtl;
-  @include input(4rem);
+  @include input(1rem);
 }
 .icon_inside {
   position: relative;
@@ -72,7 +71,6 @@
 
 //nav_right
 .nav_right {
-  
   @include center;
 }
 .nav_right a {
@@ -82,12 +80,35 @@
 
 //logo container
 .logo_container {
-  
   @include center;
 }
 
+@media (max-width: 926px) and (min-width: 768px) {
+  .header {
+    grid-template-rows: max-content;
+  }
+  .nav_left {
+    padding: 10px 10px 10px 0;
+    flex-direction: column-reverse;
+    justify-content: center;
+    align-items: center;
+  }
+}
 
-@media (max-width:926px) {
-  .nav_right {
-    background-color: aqua};
+@media (max-width: 768px) {
+  .header {
+    grid-template-rows: max-content;
+    grid-template-columns: 1fr 2fr 1fr;
+  }
+  .nav_left {
+    justify-content: center;
+    align-items: center;
+  }
+  .nav_right,
+  .nav_left select {
+    display: none;
+  }
+  .input {
+    @include input(1rem);
+  }
 }
