--- a/styles/product.module.scss
+++ b/styles/product.module.scss
@@ -41,3 +41,17 @@
 .button {
   @include button;
 }
+
+@media (max-width: 768px) {
+.products_container{
+  grid-template-columns: auto auto ;
+}
+
+
+}
+
+@media (max-width: 926px)and (min-width: 768px){
+  .products_container{
+    grid-template-columns: auto auto auto;
+  }
+}
