--- a/styles/navbar.module.scss
+++ b/styles/navbar.module.scss
@@ -16,6 +16,7 @@
   @include boxSadow;
 }
 
+//card container
 .card_container {
   @include center;
 }
@@ -53,7 +54,6 @@
     }
   }
 }
-
 //search box
 .input {
   direction: rtl;
@@ -82,10 +82,8 @@
 .logo_container {
   @include center;
 }
-.hamburger_icon {
-  display: none;
-}
 
+//responsive in tablet size
 @media (max-width: 926px) and (min-width: 768px) {
   .header {
     grid-template-rows: max-content;
@@ -98,6 +96,7 @@
   }
 }
 
+//responsive in mobile size
 @media (max-width: 768px) {
   .header {
     grid-template-rows: 8vh;
@@ -121,28 +120,4 @@
   .input {
     @include input(1rem);
   }
-}
-
-.hamburger_list {
-  display: flex;
-  flex-direction: column;
-  padding-top: 20vh;
-  text-align: center;
-   a{
-    padding: 7px 0 ;
-    font-weight: 700;
-    font-size: 1.2rem;
-    &:hover {
-      color:black;
-    }
-  }
-  
-}
-.close_container {
-  height: 8vh;
-  width: 100vw;
-  display: flex;
-  align-items: center;
-  justify-content: flex-end;
-  padding-right: 6vw;
 }
