--- a/styles/categories.module.scss
+++ b/styles/categories.module.scss
@@ -1,41 +1,42 @@
 @import "variables";
 @import "mixin";
 
-
-.container{
-width:100vw ;
-display: grid;
-padding: 0 4vw;
-font-size: 0.5rem;
-color: $dark_text;
-grid-template-columns:auto auto ;
-gap: 1.5rem;
-grid-template-rows: 35vh 35vh;
+.container {
+  width: 100vw;
+  display: grid;
+  padding: 0 4vw;
+  font-size: 0.5rem;
+  color: $dark_text;
+  grid-template-columns: auto auto;
+  gap: 1.5rem;
+  grid-template-rows: 35vh 35vh;
 }
 
+.left_card {
+  grid-area: 1 / 1 /3 /2;
+  background-color: $light_green;
+  @include categori_content;
+}
+.top_card {
+  grid-area: 1 / 2 /2 /3;
+  background-color: $gray !important;
+  @include categori_content;
+}
+.bottom_card {
+  grid-area: 2 / 2 /3 /3;
+  background-color: $pink;
+  @include categori_content;
+}
 
-.left_card{
-    grid-area: 1 / 1 /3 /2;
-    background-color: $light_green;
-    @include categori_content;
-}
-.top_card{
-    grid-area: 1 / 2 /2 /3;   
-    background-color:$gray !important;
-    @include categori_content;
-}
-.bottom_card{
-    grid-area: 2 / 2 /3 /3;
-    background-color: $pink;
-    @include categori_content;
-}
-
+//responsive for mobile size
 @media (max-width: 768px) {
-  .container{
-    grid-template-columns:auto ;
+  .container {
+    grid-template-columns: auto;
     grid-template-rows: 35vh 35vh 35vh;
   }
-  .left_card , .top_card,.bottom_card{
-    grid-area:auto;
-}
+  .left_card,
+  .top_card,
+  .bottom_card {
+    grid-area: auto;
+  }
 }
