--- a/styles/footer.module.scss
+++ b/styles/footer.module.scss
@@ -1,54 +1,54 @@
 @import "variables";
 
-.footer{
-    display: grid;
-    color: $light_text;
-    font-size: 0.8rem;
-    grid-template-columns: 1fr 1fr 1fr 2fr;
-    background-color: $footer_bg;
+//footer container
+.footer {
+  display: grid;
+  color: $light_text;
+  font-size: 0.8rem;
+  grid-template-columns: 1fr 1fr 1fr 2fr;
+  background-color: $footer_bg;
 }
-.logo_container{
-    display: flex;
-    justify-content: flex-end;
-    background-color: $footer_bg;
-    padding: 1rem 4rem 0 0;
+//logo container in footer
+.logo_container {
+  display: flex;
+  justify-content: flex-end;
+  background-color: $footer_bg;
+  padding: 1rem 4rem 0 0;
 }
-.text{
-    padding:8px 2rem 0 2rem ;
-    text-align: right;
-    
+//describtion text style
+.text {
+  padding: 8px 2rem 0 2rem;
+  text-align: right;
 }
-.footer ul{
-    list-style-type: none;
-    text-align: right;
+.footer ul {
+  list-style-type: none;
+  text-align: right;
 }
 .footer ul li {
-    padding: 3px 0;
+  padding: 3px 0;
 }
 
-.list{
-    padding: 0 2rem 2rem 0;
+.list {
+  padding: 0 2rem 2rem 0;
 }
-.title_li{
-color: $dark_text;
-font-size: .9rem;
-padding: 8px 0;
+.title_li {
+  color: $dark_text;
+  font-size: 0.9rem;
+  padding: 8px 0;
 }
-.footer ul a{
-    
-&:hover{
+.footer ul a {
+  &:hover {
     color: $green;
-}
+  }
 }
 
+//responsive for mobile size
 @media (max-width: 768px) {
-    .footer{
-      grid-template-columns: 1fr 2fr ;
-    }
-    .text{
-        padding:8px 0rem 0 2rem ;
-        text-align: right;
-        
-    }
-    
-    }
+  .footer {
+    grid-template-columns: 1fr 2fr;
+  }
+  .text {
+    padding: 8px 0rem 0 2rem;
+    text-align: right;
+  }
+}
