add signup & sign in ui

--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -1,13 +1,13 @@
 /* colors variables */
 
-$green: rgb(107, 140, 85);
-$light_green: rgb(236, 242, 230);
+$green: #6b8c55;
+$light_green: #ecf2e6;
 $dark_text: #42474b;
 $gray: rgb(234, 237, 242);
 $pink: rgb(247, 237, 238);
 $product_bg: rgb(243, 243, 243);
 $footer_bg: rgb(243, 243, 243);
-$light_text: rgb(121, 121, 121);
+$light_text: #797979;
 
 :export {
   green: $green;
