--- a/styles/auth.module.scss
+++ b/styles/auth.module.scss
@@ -18,7 +18,13 @@
   }
 }
 
-//search box
+.title {
+  color: $green;
+  font-size: 1.8rem;
+  margin-bottom: 4rem;
+}
+
+//input classes
 .icon_inside {
   position: relative;
   width: 100%;
@@ -48,15 +54,10 @@
   width: 100%;
   color: #f14156b3;
 }
-//special button
+
 .button {
   @include button;
   width: 100%;
   margin-top: 1rem;
   font-size: 1.4rem;
-}
-.title {
-  color: $green;
-  font-size: 1.8rem;
-  margin-bottom: 4rem;
 }
