--- a/src/styles/_mixin.scss
+++ b/src/styles/_mixin.scss
@@ -106,3 +106,8 @@
     rgba(0, 0, 0, 0.03) 0px 8px 4px, rgba(0, 0, 0, 0.03) 0px 16px 8px,
     rgba(0, 0, 0, 0.03) 0px 32px 16px;
 }
+@mixin border {
+  border: 1px solid rgba(205, 207, 211,.5) ;
+    border-radius: 16px;
+   
+}
