--- a/src/styles/auth.module.scss
+++ b/src/styles/auth.module.scss
@@ -4,7 +4,6 @@
 .form_container {
   display: flex;
   align-items: center;
-  justify-content: space-between;
   flex-direction: column;
   height: 100%;
 
@@ -28,7 +27,6 @@
 .icon_inside {
   position: relative;
   width: 100%;
-  margin-top: 1rem;
   color: rgb(70, 77, 97);
 }
 .input {
@@ -40,6 +38,7 @@
   border: none;
   outline: none;
   border-radius: 8px;
+  margin-bottom: 1rem;
 }
 .icon_inside svg {
   position: absolute;
@@ -48,10 +47,9 @@
   margin-left: 1rem;
 }
 .error {
-  margin: 0.5rem 0;
+  margin: -0.7rem 0 0.5rem 0;
   text-align: right;
   font-size: 1rem;
   width: 100%;
   color: #f14156b3;
 }
-
