add toman to card

--- a/src/styles/cart.module.scss
+++ b/src/styles/cart.module.scss
@@ -6,38 +6,39 @@
   align-items: center;
   width: 60vw;
   color: $dark-text;
-  text-align: left;
+  text-align: center;
   th {
     color: $light_text;
     font-size: 0.9rem;
     font-weight: 500;
   }
   tr {
-    border-bottom: 1px solid #e0e0e2;
+    border-bottom: 1px solid #ebebec;
   }
-  th:nth-child(4) {
-    text-align: center;
-  }
-  td:nth-child(4) {
-    text-align: center;
-    height: calc(70px + 2rem);
-    @include center;
-  }
-  td:nth-child(1) {
-    width: calc(70px + 1rem);
-  }
-  table {
-    width: 100%;
-    border-collapse: collapse;
-  }
+}
+.container th:nth-child(1),
+.container td:nth-child(2) {
+  text-align: left;
+}
+.container td:nth-child(4) {
+  text-align: center;
+  height: calc(70px + 2rem);
+  @include center;
+}
+.container td:nth-child(1) {
+  width: calc(70px + 1rem);
+}
+.container table {
+  width: 100%;
+  border-collapse: collapse;
+}
 
-  td p {
-    margin: 0;
-  }
-  td p:nth-child(2) {
-    font-size: 0.7rem;
-    color: $light_text;
-  }
+.container td p {
+  margin: 0;
+}
+.container td p:nth-child(2) {
+  font-size: 0.7rem;
+  color: $light_text;
 }
 .img {
   background-color: rgb(238, 238, 238);
