--- a/src/styles/cart.module.scss
+++ b/src/styles/cart.module.scss
@@ -4,7 +4,7 @@
 .container {
   display: flex;
   align-items: center;
-  width: 60vw;
+
   color: $dark-text;
   text-align: center;
   th {
@@ -41,17 +41,17 @@
   color: $light_text;
 }
 .img {
-  background-color: rgb(238, 238, 238);
+  background-color: #eeeeee;
   height: 70px;
   width: 70px;
   margin: 1rem 1rem 1rem 0;
   @include center;
 }
 .icon {
-  background-color: rgb(238, 238, 238);
+  background-color: #eeeeee;
   padding: 5px;
   border-radius: 50%;
   &:hover {
-    background-color: rgb(200, 200, 200);
+    background-color: #c8c8c8;
   }
 }
