--- a/src/styles/shoping_card.module.scss
+++ b/src/styles/shoping_card.module.scss
@@ -2,27 +2,14 @@
 @import "mixin";
 
 .container {
-  padding: 8rem 4rem 4rem 4rem;
-  display: flex;
-  width: calc(100vw - 8rem);
-  min-height: calc(100vh - 12rem);
+  display: grid;
+  grid-template-columns: 60vw 24vw;
+  gap: 4vw;
+  padding: 2rem 5vw;
 }
 
-.purchase_details {
-  @include border;
-  height: 30vh;
-  padding: 2rem;
-  margin: 1rem 0 0 1rem;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-
-.clear_checkout_div {
-  position: absolute;
-  left: 35%;
-  right: 35%;
-  top: 12rem;
-  padding: 5rem;
-  align-self: start;
+@media (max-width: 900px) {
+  .container {
+    grid-template-columns: auto;
+  }
 }
