--- a/src/styles/shoping_card.module.scss
+++ b/src/styles/shoping_card.module.scss
@@ -3,13 +3,15 @@
 
 .container {
   display: grid;
+  margin:14vh 0 4vh 0;
   grid-template-columns: 60vw 24vw;
   gap: 4vw;
   padding: 2rem 5vw;
 }
 
-@media (max-width: 900px) {
+@media (max-width: 1000px) {
   .container {
     grid-template-columns: auto;
+   
   }
 }
