add link to mobile hamburger

--- a/src/styles/product.module.scss
+++ b/src/styles/product.module.scss
@@ -7,7 +7,7 @@
   column-gap: 1.5rem;
   row-gap: 2rem;
   grid-template-columns: auto auto auto auto;
-  padding: 4vw;
+  padding: 4vw 10vw;
 }
 
 //one product style
