--- a/src/styles/mobile_table.module.scss
+++ b/src/styles/mobile_table.module.scss
@@ -12,7 +12,8 @@
     font-size: 0.9rem;
     font-weight: 500;
     background-color: #eeeeee;
-    min-height: 2rem;
+    min-height: 3rem;
+    line-height: 3rem;
   }
   tr {
     border-bottom: 1px solid #ebebec;
