--- a/src/styles/shoping_card.module.scss
+++ b/src/styles/shoping_card.module.scss
@@ -15,6 +15,7 @@
 @media (max-width: 768px) {
   .container {
     grid-template-columns: auto;
+    justify-items: center;
   }
   .mobile {
     display: flex;
