--- a/src/styles/order_summery.module.scss
+++ b/src/styles/order_summery.module.scss
@@ -20,7 +20,7 @@
     background-color: #eeeeee;
     font-size: 1rem;
     padding: 0.5rem;
-    border: 1px solid rgb(204, 204, 204);
+    border: 1px solid #cccccc;
     border-bottom: none;
     border-collapse: collapse;
   }
