--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -6,7 +6,7 @@ $dark_text: #42474b;
 $gray: rgb(234, 237, 242);
 $pink: rgb(247, 237, 238);
 $product_bg: rgb(243, 243, 243);
-$footer_bg: rgb(243, 243, 243);
+$footer_bg: #f3f3f3;
 $light_text: #797979;
 
 :export {
