--- a/src/styles/auth.module.scss
+++ b/src/styles/auth.module.scss
@@ -13,7 +13,6 @@
     width: 100%;
     font-size: 1.1rem;
     padding-top: 1rem;
-   
   }
 }
 
@@ -52,4 +51,15 @@
   font-size: 1rem;
   width: 100%;
   color: #f14156b3;
+}
+.textarea {
+  direction: rtl;
+  height: 80px;
+  width: 100%;
+  background-color: $footer_bg;
+  padding: 0.8rem 2rem 1.2rem 2rem;
+  border: none;
+  outline: none;
+  border-radius: 8px;
+  margin-bottom: 1rem;
 }
