change texterea fontsize

--- a/src/styles/auth.module.scss
+++ b/src/styles/auth.module.scss
@@ -38,6 +38,7 @@
   outline: none;
   border-radius: 8px;
   margin-bottom: 1rem;
+  font-size: .8rem;
 }
 .icon_inside svg {
   position: absolute;
@@ -62,4 +63,5 @@
   outline: none;
   border-radius: 8px;
   margin-bottom: 1rem;
+  font-size: .8rem;
 }
