remove header background

--- a/src/styles/mobile_table.module.scss
+++ b/src/styles/mobile_table.module.scss
@@ -11,7 +11,7 @@
     color: $light_text;
     font-size: 0.9rem;
     font-weight: 500;
-    background-color: #eeeeee;
+   // background-color: #eeeeee;
     min-height: 3rem;
     line-height: 3rem;
   }
