--- a/src/styles/mobile_table.module.scss
+++ b/src/styles/mobile_table.module.scss
@@ -30,7 +30,8 @@
     width: 90vw;
   }
   tbody{
-    border: 1px solid #ccc;
+    border: 1px solid #ebebec;
+    border-bottom: none;
     }
 }
 
