add show address card desktop

--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -1,5 +1,6 @@
 @import url('http://fonts.cdnfonts.com/css/iranian-sans');
 @import url("https://cdn.fontcdn.ir/Font/Persian/Vazir/Vazir.css");
+@import url('https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css');
 html,
 body {
   padding: 0;
