add Input component to info

--- a/src/components/shared/dropdown/dropdown.module.scss
+++ b/src/components/shared/dropdown/dropdown.module.scss
@@ -13,3 +13,10 @@
     border-radius: 8px;
     margin-bottom: 1rem;
   }
+  .error {
+    margin: -0.7rem 0 0.5rem 0;
+    text-align: right;
+    font-size: 1rem;
+    width: 100%;
+    color: #f14156b3;
+  }
