--- a/src/components/shared/input/input.module.scss
+++ b/src/components/shared/input/input.module.scss
@@ -6,10 +6,10 @@
 }
 //input classes
 .icon_inside {
-    position: relative;
-    width: 100%;
-    color: rgb(70, 77, 97);
-  }
+  position: relative;
+  width: 100%;
+  color: rgb(70, 77, 97);
+}
 .input {
   direction: rtl;
   height: 45px;
@@ -34,4 +34,16 @@
   font-size: 1rem;
   width: 100%;
   color: #f14156b3;
+}
+.textarea {
+  direction: rtl;
+  height: 80px;
+  width: 100%;
+  background-color: $footer_bg;
+  padding: 0.8rem 2rem 1.2rem 2rem;
+  border: none;
+  outline: none;
+  border-radius: 8px;
+  margin-bottom: 1rem;
+  font-size: 0.8rem;
 }
