--- a/src/pages/screens/payment/payment.module.scss
+++ b/src/pages/screens/payment/payment.module.scss
@@ -5,7 +5,8 @@
   @include center;
   flex-direction: column;
   color: $dark_text;
-  margin-bottom: 3rem;
+  margin: 10vh 0 4vh 0;
+  padding-bottom: 6vh;
 }
 
 .about_payment {
