--- a/src/components/shared/dropdown/dropdown.module.scss
+++ b/src/components/shared/dropdown/dropdown.module.scss
@@ -4,7 +4,7 @@
 
 .input {
     direction: rtl;
-    height: 45px;
+    height: 60px;
     width: 100%;
     background-color: $green;
     // padding: 1.2rem 2rem 1.2rem 2rem;
@@ -16,7 +16,7 @@
   .error {
     margin: -0.7rem 0 0.5rem 0;
     text-align: right;
-    font-size: 1rem;
+    font-size: .9rem;
     width: 100%;
     color: #f14156b3;
   }
