--- a/src/components/shared/input/input.module.scss
+++ b/src/components/shared/input/input.module.scss
@@ -12,7 +12,7 @@
 }
 .input {
   direction: rtl;
-  height: 45px;
+  height: 60px;
   width: 100%;
   background-color: $footer_bg;
   padding: 1.2rem 2rem 1.2rem 2rem;
@@ -20,24 +20,24 @@
   outline: none;
   border-radius: 8px;
   margin-bottom: 1rem;
-  font-size: 0.8rem;
+  font-size: 1rem;
 }
 .icon_inside svg {
   position: absolute;
   right: 5px;
-  top: 10px;
+  top: 16px;
   margin-left: 1rem;
 }
 .error {
   margin: -0.7rem 0 0.5rem 0;
   text-align: right;
-  font-size: 1rem;
+  font-size: .9rem;
   width: 100%;
   color: #f14156b3;
 }
 .textarea {
   direction: rtl;
-  height: 80px;
+  height: 100px;
   width: 100%;
   background-color: $footer_bg;
   padding: 0.8rem 2rem 1.2rem 2rem;
@@ -45,5 +45,5 @@
   outline: none;
   border-radius: 8px;
   margin-bottom: 1rem;
-  font-size: 0.8rem;
+  font-size: 1rem;
 }
