--- a/src/pages/screens/identity_information/identity_information.module.scss
+++ b/src/pages/screens/identity_information/identity_information.module.scss
@@ -15,6 +15,9 @@
     margin-bottom: 0.5rem;
     font-size: 0.9rem;
     color: $dark_text;
+    span{
+      color: $red;
+    }
   }
 }
 .form_container {
